[package]
name = "ralte32"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
description = "Arithmetic Library Testing Environment for embedded RISC-V 32-bit"
version = "0.1.1"

edition = "2021"

categories = ["development-tools", "development-tools:testing"]
keywords = ["risc-v", "test", "rv32"]

repository = "https://github.com/riscvonomicon/ralte32"
homepage = "https://github.com/riscvonomicon/ralte32"

readme = "README.md"
license = "MIT OR Apache-2.0"
